--- a/src/styles/components/_feedSound.scss
+++ b/src/styles/components/_feedSound.scss
@@ -6,7 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(255, 205, 131);
+    background-color: rgb(255, 173, 50);
+    border: solid .15vw rgb(191, 124, 0);
+    color: white;
 
     &__heading {
         position: absolute;
@@ -41,6 +43,8 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(189, 131, 255);
+    border: solid .15vw purple;
+    color: white;
 }
 
 .feedsound-pod:hover {
@@ -48,5 +52,5 @@
 }
 
 .feedsound:hover {
-    background-color: rgb(249, 219, 175);
+    background-color: rgb(252, 187, 88);
 }
