[all book] added ability to add a book

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,7 @@
 @import "./components/feedBlurb";
 @import "./components/feedSound";
 @import "./components/feedComment";
+@import "./components/feedBook";
 @import "./variables.scss";
 
 
