--- a/src/styles/components/_spotify.scss
+++ b/src/styles/components/_spotify.scss
@@ -25,6 +25,17 @@
         align-items: center;
     }
 
+    &__tag-book {
+        color: white;
+        border-radius: .5rem .5rem 0 0;
+        background-color: green;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: .5rem .8rem .5rem .5rem;
+        align-items: center;
+    }
+
     &__container {
         padding: .5rem;
         cursor: default;
