--- a/src/styles/components/_soundtrack.scss
+++ b/src/styles/components/_soundtrack.scss
@@ -45,6 +45,11 @@
         height: 10rem;
     }
 
+    &__result-img-book {
+        width: 8rem;
+        height: 10rem;
+    }
+
     &__artist-name {
         font-size: 1.8rem;
         margin-left: 1rem;
