--- a/src/styles/components/_feedBook.scss
+++ b/src/styles/components/_feedBook.scss
@@ -32,6 +32,15 @@
     &__artist {
         font-size: 1vw;
     }
+
+    &__type {
+        position: absolute;
+        top: .1vw;
+        left: .5vw;
+        font-size: 1vw;
+        font-weight: 600;
+        color: rgb(0, 99, 0);
+    }
 }
 
 
