[all buildbox] adding loading bar and phone loading on any content creation

--- a/src/styles/components/_feedSound.scss
+++ b/src/styles/components/_feedSound.scss
@@ -8,7 +8,7 @@
     align-items: center;
     background-color: rgb(255, 173, 50);
     border: solid .15vw rgb(191, 124, 0);
-    color: white;
+    color: rgb(116, 76, 1);
 
     &__heading {
         position: absolute;
@@ -62,7 +62,7 @@
     align-items: center;
     background-color: rgb(189, 131, 255);
     border: solid .15vw purple;
-    color: white;
+    color: rgb(101, 0, 101);
 }
 
 .feedsound-pod:hover {
