--- a/src/styles/components/_feedBook.scss
+++ b/src/styles/components/_feedBook.scss
@@ -6,9 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(75, 191, 43);
+    background-color: rgb(52, 187, 77);
     border: solid .15vw green;
-    color: white;
+    color: rgb(1, 72, 1);
 
     &__heading {
         position: absolute;
@@ -45,5 +45,5 @@
 
 
 .feedbook:hover {
-    background-color: rgb(113, 194, 90);
+    background-color: rgb(117, 199, 132);
 }
