[Userpage] added the userpage route and content

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "./pages/landing";
 @import "./pages/signup";
 @import "./pages/manage";
+@import "./pages/userpage";
 @import "./components/navigation";
 @import "./components/privatenav";
 @import "./components/sandbox";
