--- a/src/styles/components/_feedLink.scss
+++ b/src/styles/components/_feedLink.scss
@@ -13,7 +13,7 @@
     &__title {
         font-size: 1.5vw;
         font-weight: 500;
-        color: darkred;
+        color: white;
         letter-spacing: 1px;
     }
 }
