--- a/src/styles/components/_spotify.scss
+++ b/src/styles/components/_spotify.scss
@@ -58,4 +58,10 @@
         margin-right: 1rem;
     }
 
+    &__img-book {
+        width: 8rem;
+        height: 10rem;
+        margin-right: 1rem;
+    }
+
 }
