--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -5,9 +5,9 @@
     padding-bottom: 110%;
     border: solid 1.1vw black;
     border-radius: 2.5vw;
-    overflow: auto;
     margin: 3rem auto;
     background-color: #fff;
+    overflow: auto;
     
     &__profile-pic {
         width: 6vw;
@@ -15,10 +15,14 @@
         border: solid $color-dark .5px;
         border-radius: 10%;
     }
-
+    
     &__content {
         text-align: center;
         margin-top: 1rem;
+    }
+    
+    &__content-container {
+        height: 100%;
     }
 
     &__name {
@@ -44,12 +48,31 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        // margin-top: 5vw;
     }
 
     &__icon {
         width: 1.3vw;
         height: 1.3vw;
         margin-right: .5rem;
+        
+    }
+
+    &__logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 1vw;
+        padding-bottom: 2vw;
+    }
+
+    &__logo {
+        width: 2.5vw;
+        margin-right: .3vw;
+    }
+
+    &__logo-text {
+        font-size: 1.5vw;
     }
 
 
