[Signup] added validation to signup form

--- a/src/styles/components/_spotify.scss
+++ b/src/styles/components/_spotify.scss
@@ -28,7 +28,7 @@
     &__tag-book {
         color: white;
         border-radius: .5rem .5rem 0 0;
-        background-color: green;
+        background-color: rgb(1, 139, 105);
         display: flex;
         flex-direction: row;
         justify-content: space-between;
