[Phone] made the logo link stay in position without content

--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -5,7 +5,7 @@
     padding-bottom: 110%;
     border: solid 1.1vw black;
     border-radius: 2.5vw;
-    margin: 3rem auto;
+    margin: 3vw auto;
     background-color: #fff;
     overflow: auto;
     
@@ -18,7 +18,8 @@
     
     &__content {
         text-align: center;
-        margin-top: 1rem;
+        margin-top: 1vw;
+        min-height: 27vw;
     }
     
     &__content-container {
@@ -36,8 +37,8 @@
     }
 
     &__about {
-        margin: .5rem .5rem;
-        font-size: 1.5rem;
+        margin: .5vw .5vw;
+        font-size: 1.5vw;
         font-size: 1.2vw;
         display: flex;
         flex-direction: row;
@@ -48,7 +49,6 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        // margin-top: 5vw;
     }
 
     &__icon {
