--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -2,6 +2,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
 
 
     &__title {
@@ -48,7 +49,7 @@
         width: 47%;
         padding: .5rem;
         margin: .5rem;
-        background-color: rgb(252, 72, 40);
+        background-color: rgb(232, 35, 0);
         border: none;
         border-radius: 1rem;
         color: white;
@@ -90,6 +91,15 @@
         align-items: center;
         position: relative;
         margin-right: 3.8rem;
+    }
+
+    &__empty {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 2.2rem;
+        color: rgba(gray, .7);
     }
 
 }
