--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -15,6 +15,15 @@
         border: solid $color-dark .5px;
         border-radius: 10%;
     }
+
+    &__profile-pic-default {
+        width: 6vw;
+        height: 6vw;
+        padding: .5vw;
+        border: solid gray .5px;
+        background-color: gainsboro;
+        border-radius: 10%;
+    }
     
     &__content {
         text-align: center;
