--- a/src/styles/components/_privatenav.scss
+++ b/src/styles/components/_privatenav.scss
@@ -10,6 +10,7 @@
     align-items: center;
     padding: 2rem 3rem;
     justify-content: space-between;
+    z-index: 1000;
 
     &__settings {
         background-color: white;
