[Account] account page with ability to delete your profile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,7 @@
 @import "./pages/signup";
 @import "./pages/manage";
 @import "./pages/userpage";
+@import "./pages/account";
 @import "./components/navigation";
 @import "./components/privatenav";
 @import "./components/sandbox";
