[LandingPage] styling for the landing page

--- a/src/styles/components/_feedComment.scss
+++ b/src/styles/components/_feedComment.scss
@@ -1,7 +1,8 @@
 .feedcomment {
 
     text-align: left;
-    margin-left: 2vw;
+    margin-left: 1vw;
+    margin-bottom: -1vw;
     transform: translateY(-1rem);
 
     &__text {
