--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -37,4 +37,36 @@
         font-size: 1.3rem;
     }
 
+    &__container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 60%;
+        margin: 15rem auto;
+    }
+
+    &__small-container {
+        margin-bottom: 15rem;
+    }
+
+    &__photo {
+        height: 55rem;
+    }
+
+    &__example {
+        padding: 2rem;
+        border: solid 2px rgb(255, 106, 47);
+        border-radius: 5rem;
+        width: 43rem;
+        margin: 6rem auto 0;
+    }
+
+    &__example-text {
+        font-size: 2.5rem;
+    }
+
+    &__example-faint {
+        opacity: .3;
+    }
+
 }
