Added validation for file size on profile picture upload

--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -55,7 +55,7 @@
 
     &__example {
         padding: 2rem;
-        border: solid 2px rgb(255, 106, 47);
+        border: solid 2px $color-blue;
         border-radius: 5rem;
         width: 43rem;
         margin: 6rem auto 0;
