[Settings] added new settings page and api functions

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,6 +20,7 @@
 @import "./components/feedSound";
 @import "./components/feedComment";
 @import "./components/feedBook";
+@import "./components/settings";
 @import "./variables.scss";
 
 
