--- a/src/styles/pages/_userpage.scss
+++ b/src/styles/pages/_userpage.scss
@@ -5,4 +5,127 @@
         width: 50%;
         margin: 10rem auto;
     }
+
+    &__profile-pic {
+        width: 6vw;
+        height: 6vw;
+        border: solid $color-dark .5px;
+        border-radius: 10%;
+    }
+
+    &__name {
+        font-size: 1.2vw;
+        font-weight: 500;
+    }
+    
+    &__username {
+        font-size: 1.2vw;
+        font-weight: 500;
+    }
+
+    &__about {
+        margin: .5vw .5vw;
+        font-size: 1.5vw;
+        font-size: 1.2vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    &__logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 3vw;
+        padding-bottom: 2vw;
+    }
+
+    &__logo-container:hover {
+        cursor: pointer;
+    }
+
+    &__logo {
+        width: 2.5vw;
+        margin-right: .3vw;
+    }
+
+    &__logo-text {
+        font-size: 1.5vw;
+    }
+
+    &__icon-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    &__icon {
+        width: 1.3vw;
+        height: 1.3vw;
+        margin-right: .5rem;
+    }
+
+
+}
+
+
+@media (max-width: 1100px) {
+    .userpage {
+        &__feed {
+            width: 70%;
+        }
+
+        &__profile-pic {
+            width: 10rem;
+            height: 10rem;
+            border: solid $color-dark .5px;
+            border-radius: 10%;
+        }
+
+        &__text {
+            font-size: 1.5rem;
+        }
+
+        &__icon {
+            width: 1.6rem;
+            height: 1.6rem;
+            margin-right: .5rem;
+        }
+
+        &__name {
+            font-size: 1.5rem;
+            font-weight: 500;
+        }
+        
+        &__username {
+            font-size: 1.5rem;
+            font-weight: 500;
+        }
+
+        &__logo {
+            width: 5rem;
+            margin-right: 1rem;
+        }
+    
+        &__logo-text {
+            font-size: 3rem;
+        }
+
+    }
+
+}
+
+@media (max-width: 900px) {
+    .userpage {
+        &__feed {
+            width: 95%;
+        }
+
+        &__logo-container {
+
+            padding-top: 8vw;
+         
+        }
+    }
+
 }
