--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap");
 @import "./pages/landing";
 @import "./pages/signup";
 @import "./pages/manage";
@@ -23,36 +23,46 @@
 @import "./components/settings";
 @import "./variables.scss";
 
-
-
 *,
 *::before,
 *::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
-  background-color: $bg-color;
-  scroll-behavior: smooth;
+    font-size: 62.5%;
+    background-color: $bg-color;
+    scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 .flex-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 #text-area {
-  font-family: "Raleway", sans-serif;
-  font-size: 1.5rem;
-  line-height: 1.3;
-  min-height: 10rem;
-  padding: .5rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.3;
+    min-height: 10rem;
+    padding: 0.5rem;
+}
+
+@media (max-width: 1000px) {
+    html {
+        font-size: 55.5%;
+    }
+}
+
+@media (max-width: 800px) {
+    html {
+        font-size: 50%;
+    }
 }
